homelab-gitops/apps/tautulli/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
spec:
  selector:
    app: tautulli
  ports:
    - name: http
      port: 80
      targetPort: 8181
